Fixed merge